--- a/components/x-about/index.html
+++ b/components/x-about/index.html
@@ -5,15 +5,14 @@
                 display: block;
                 width: 100%;
                 height: 100vh;
-                line-height:110vh;
-                vertical-align: middle;
                 text-align: center;
                 font-size: 2.0vw;
             }
 
             .about {
                 display:inline-block;
-                margin-top: 10vh;
+                margin: 25vh 0 0 0;
+                padding: 0;
                 line-height: 20px;
                 text-align: left;
             }
@@ -21,6 +20,7 @@
             li {
                 list-style: none;
                 margin: 10px 0;
+                padding: 0;
             }
 
             span {
@@ -28,25 +28,102 @@
                 text-decoration: underline;
                 cursor: pointer;
             }
+
+            .update {
+                display: inline-block;
+                text-align: center;
+                width: 80px;
+                height: 25px;
+                line-height: 25px;
+                border: 1px solid rgba(100,100,100,0.5);
+                background: rgba(255,255,255,0.4);
+                color: #000;
+                text-decoration: none;
+                cursor: pointer;
+            }
+
+            .update i {
+                font-style: normal;
+                font-size: 14px;
+            }
+
+            @-webkit-keyframes  loading {
+                from {-webkit-transform: rotate(0deg);}
+                to {-webkit-transform: rotate(360deg);}
+            }
+
+            .update.checking i {
+                -webkit-animation:loading 2s infinite linear ;
+            }
+
+            .update:hover {
+                background: rgba(255,255,255,0.8);
+            }
+
 		</style>
-		<div class="about">
+		<ul class="about">
             <li>版本：dbfm v{{version}}</li>
             <li>源码：<span on-click="{{goToLink}}"  href="https://github.com/sapjax/dbfm">Github</span></li>
             <li>作者：<span on-click="{{goToLink}}" href="http://weibo.com/sapjax">@压缩包子</span></li>
-		</div>
+            <template if="{{!checkd}}">
+                <li><span class="update {{checking ? 'checking' : ''}}" on-click="{{checkUpdate}}">
+                    <i class="iconfont">&#xe63b;</i>检查更新</span>
+                </li>
+            </template>
+            <template if="{{noUpdate}}">
+                <li>已经是最新版本</li>
+            </template>
+            <template if="{{newVersion}}">
+                <li><span on-click="{{goToLink}}" href="https://github.com/sapjax/dbfm">发现新版本{{newVersion}}</span></li>
+            </template>
+		</ul>
 	</template>
 	<script>
 	Polymer('x-about',{
-        version : '1.0.0',
+        version : '0.0.0',
+        localUrl : './package.json',
+        remoteUrl : 'https://raw.githubusercontent.com/sapjax/dbfm/master/package.json',
+        ready : function() {
+            this.setVersion()
+        },
+
+        setVersion : function() {
+            var self = this
+            var fs = require('fs')
+            fs.readFile(self.localUrl, function(err, data){
+                if(err) console.error(err)
+                data = JSON.parse(data.toString())
+                self.version = data.version
+            })
+        },
+
         goToLink : function(e) {
             var btn = e.currentTarget
             var open = require('open')
             open(btn.getAttribute('href'))
         },
 
-        //自动更新
-        autoUpdate : function() {
-            //TODO
+        checkUpdate : function() {
+            var self = this
+            var request = require('request')
+            self.checking = true
+            request(self.remoteUrl, function(err, res, body) {
+                self.checking = false
+                if(err) return console.error(err)
+                body = JSON.parse(body)
+                var version = body.version || '0'
+                if(self.compareVersion(version, self.version) > 0) {
+                    self.newVersion = version
+                } else {
+                    self.noUpdate = true
+                }
+            })
+        },
+
+        compareVersion: function(v1, v2) {
+            v1 = v1.split('.').join('')
+            v2 = v2.split('.').join('')
+            return parseInt(v1) - parseInt(v2)
         }
 	})
 	</script>
