--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,93 +1,135 @@
-* {
-  margin: 0;
-  padding: 0; }
+html, body {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+}
 
 ul, li {
-  list-style: none; }
-
-html, body {
-  height: 100%; }
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
 
 body {
-  -webkit-transition: background 0.4s ease-in;
-  transition: background 0.4s ease-in; }
+    transition: background 0.4s ease-in;
+    webkit-transition: background 0.4s ease-in;
+}
 
 #wrapper {
-  width: 100%;
-  height: 100%;
-  position: relative; }
+    height: 100%;
+    position: relative;
+    width: 100%;
+}
 
 .sidebar {
-  display: block;
-  position: absolute;
-  left: 0;
-  right: 50%;
-  top: 0;
-  bottom: 0; }
-  .sidebar .nav {
+    bottom: 0;
     display: block;
-    width: 10vw;
-    height: 80vh;
-    padding-top: 10vh;
-    padding-bottom: 10vh;
-    box-shadow: 0 1px 0 #f00;
-    background: rgba(200, 200, 200, 0.5); }
-    .sidebar .nav li {
-      height: 16vh;
-      line-height: 16vh;
-      text-align: center;
-      cursor: pointer; }
-      .sidebar .nav li.active {
-        background: rgba(100, 100, 100, 0.2); }
-  .sidebar .content {
+    left: 0;
     position: absolute;
+    right: 50%;
+    top: 0;
+}
+
+.sidebar .nav {
+    background: rgba(200, 200, 200, 0.5);
+    box-shadow: 0 1px 0 #f00;
+    display: block;
+    height: 80vh;
+    padding-bottom: 10vh;
+    padding-top: 10vh;
+    width: 10vw;
+}
+
+.sidebar .nav li {
+    cursor: pointer;
+    height: 16vh;
+    line-height: 16vh;
+    text-align: center;
+}
+
+.sidebar .nav li.active {
+    background: rgba(100, 100, 100, 0.2);
+}
+
+.sidebar .content {
+    bottom: 0;
     left: 10vw;
+    position: absolute;
     right: 0;
     top: 0;
-    bottom: 0; }
-    .sidebar .content > * {
-      display: block;
-      position: absolute;
-      left: 0;
-      top: 0;
-      right: 0;
-      bottom: 0;
-      opacity: 0;
-      z-index: 1; }
-      .sidebar .content > *.active {
-        -webkit-transition: opacity 0.4s ease-in;
-        transition: opacity 0.4s ease-in;
-        z-index: 2;
-        opacity: 1; }
+}
+
+.sidebar .content > * {
+    bottom: 0;
+    display: block;
+    left: 0;
+    opacity: 0;
+    position: absolute;
+    right: 0;
+    top: 0;
+    z-index: 1;
+}
+
+.sidebar .content > *.active {
+    opacity: 1;
+    transition: opacity 0.4s ease-in;
+    webkit-transition: opacity 0.4s ease-in;
+    z-index: 2;
+}
 
 main {
-  position: absolute;
-  left: 50%;
-  right: 0;
-  top: 0;
-  bottom: 0; }
-  main song-player {
+    bottom: 0;
+    left: 50%;
     position: absolute;
+    right: 0;
+    top: 0;
+}
+
+main song-player {
     bottom: 10vh;
     left: 0;
+    position: absolute;
     right: 0;
-    text-align: center; }
+    text-align: center;
+}
 
 song-face {
-  position: absolute;
-  z-index: 10;
-  width: 50%;
-  left: 0;
-  top: 0;
-  bottom: 0;
-  -webkit-transition: left 0.4s ease-in;
-  transition: left 0.4s ease-in; }
-  song-face.hover {
-    left: 50%; }
+    bottom: 0;
+    left: 0;
+    position: absolute;
+    top: 0;
+    transition: left 0.4s ease-in;
+    webkit-transition: left 0.4s ease-in;
+    width: 50%;
+    z-index: 10;
+}
+
+song-face.hover {
+    left: 50%;
+}
 
 x-view {
-  position: absolute;
-  right: 6px;
-  top: 5px; }
+    position: absolute;
+    right: 6px;
+    top: 5px;
+}
 
-/*# sourceMappingURL=index.css.map */
+@font-face {
+    font-family: 'iconfont';
+    src:url('http://at.alicdn.com/t/font_1411638144_663203.woff') format('woff');
+}
+
+body /deep/ .iconfont{font-family:"iconfont";}
+
+body /deep/ ::-webkit-scrollbar {
+    opacity: 0.5;
+    background: rgba(255,255,255,0.5);
+    width: 2px;
+    border-radius: 4px;
+}
+
+body /deep/  ::-webkit-scrollbar-thumb {
+    background: rgba(100,100,100,0.8);
+    border-radius: 4px;
+}
+
