--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -68,12 +68,14 @@ body {
     right: 0;
     top: 0;
     z-index: 1;
+    -webkit-transform: scale(0.95);
 }
 
 .sidebar .content > *.active {
     opacity: 1;
-    transition: opacity 0.4s ease-in;
-    webkit-transition: opacity 0.4s ease-in;
+    transition: all 0.4s ease-in;
+    webkit-transition: all 0.4s ease-in;
+    -webkit-transform: scale(1);
     z-index: 2;
 }
 
