--- a/components/x-channel/index.html
+++ b/components/x-channel/index.html
@@ -67,12 +67,14 @@
             right: 0;
             bottom: 0;
             z-index: 1;
-            opacity: 0
+            opacity: 0;
+            -webkit-transform: scale(0.95);
         }
 
         .content > .active {
-            -webkit-transition: opacity 0.4s ease-in;
-            transition: opacity 0.4s ease-in;
+            -webkit-transform: scale(1);
+            -webkit-transition: all 0.4s ease-in;
+            transition: all 0.4s ease-in;
             opacity: 1;
             z-index: 2
         }
