--- a/components/song-info/index.html
+++ b/components/song-info/index.html
@@ -14,12 +14,14 @@
                 overflow: hidden;
             }
             h2 {
+                padding: 0 2vw;
                 font-size: 3vw;
                 white-space: nowrap;
                 overflow: hidden;
                 text-overflow: ellipsis;
             }
             h3 {
+                padding: 0 2vw;
                 font-size: 2vw;
             }
 		</style>
