增加歌曲搜索

--- a/components/panel-about/index.html
+++ b/components/panel-about/index.html
@@ -1,4 +1,4 @@
-<polymer-element name="x-about" attributes="version">
+<polymer-element name="panel-about" attributes="version">
 	<template>
 		<style>
             :host {
@@ -79,7 +79,7 @@
 		</ul>
 	</template>
 	<script>
-	Polymer('x-about',{
+	Polymer('panel-about',{
         version : '0.0.0',
         github : 'https://github.com/sapjax/dbfm',
         weibo : 'http://weibo.com/sapjax',
