--- a/components/panel-login/index.html
+++ b/components/panel-login/index.html
@@ -1,4 +1,4 @@
-<polymer-element name="x-login">
+<polymer-element name="panel-login">
 	<template>
 		<style>
             :host {
@@ -19,6 +19,12 @@
             .user-info span {
                 margin-bottom: 5px;
                 font-size: 2.5vw;
+            }
+
+            .user-info img {
+                border-radius: 24px;
+                box-shadow: 0 0 1px #fff;
+                margin-bottom: 5px;
             }
 
             button {
@@ -78,10 +84,13 @@
             
             .errTip {
                 margin-top: 10vh;
+                font-size: 12px;
             }
 		</style>
         <template if={{userInfo}}>
             <div class="user-info">
+                <img src="{{userInfo.avatar}}" />
+                <br />
                 <span href="http://douban.fm/" on-click="{{goToLink}}">{{userInfo.user_name}}</span>
                 <br />
                 <button on-click="{{logout}}">注 销</button>
@@ -97,7 +106,7 @@
         </template>
 	</template>
 	<script>
-	Polymer('x-login',{
+	Polymer('panel-login',{
         userInfo : null,
         ready : function() {
             var self = this
@@ -105,6 +114,9 @@
             if(cache) {
                 self.userInfo = cache
                 self.login()
+                if(!cache.avatar) {
+                    self.setAvatar()
+                }
             }
         },
 
@@ -119,6 +131,7 @@
             } else {
                 var option = self.getValidOptions()
                 if(!option) return
+                self.err = false
                 FM.appSDK.login(option, function(err, result) {
                     if(err) console.error(err)
                     if(result.r == 0) {
@@ -126,6 +139,7 @@
                         self.userInfo = result
                         FM.cache.set('CACHE:USER', result)
                         FM.obs.emit('LOGIN:UPDATE')
+                        self.setAvatar()
                         self.err = false
                     } else {
                         self.logout()
@@ -134,6 +148,16 @@
                 })
                 return false;
             }
+        },
+
+        //获取并设置头像
+        setAvatar : function() {
+            var self = this
+            FM.appSDK.avatar(function(err, avatar) {
+                if(err)  return console.error(err)
+                self.userInfo.avatar = avatar
+                FM.cache.set('CACHE:USER', self.userInfo)
+            })
         },
 
         //退出登录
