--- a/components/x-channel/index.html
+++ b/components/x-channel/index.html
@@ -1,231 +1,190 @@
-<link rel="import" href="../x-switchTab/index.html" />
-<polymer-element name="x-channel" attributes="publicChannels personalChannels genreChannels">
-<template>
-    <style>
-        :host {
-            display: block;
-            font-size: 2vw;
-            height: 100vh;
-        }
-
-        * {
-            margin: 0;
-            padding: 0;
-            list-style: none;
-        }
-
-        x-switchTab {
-            display: block;
-            padding: 1vw;
-        }
-
-        .nav {
-            border-bottom: 1px solid rgba(200, 200, 200, 0.3);
-        }
-
-        .nav li {
-            position: relative;
-            height: 8vh;
-            line-height: 8vh;
-            width: 12vw;
-            margin-right: -0.25em;
-            display: inline-block;
-            list-style: none;
-            cursor: pointer;
-            text-align: center;
-            -webkit-transform: scale(0.8);
-            transition: opacity 1s, transform 1s
-
-        }
-
-        .nav li.active {
-            background: rgba(200, 200, 200, 0.3);
-            z-index: 2;
-            -webkit-transform: scale(1);
-        }
-
-        .nav li + li {
-            margin-left: 1vw;
-        }
-
-        .content {
-            position: relative;
-            width: 100%;
-        }
-
-        .content ul {
-            margin-top: 2vh;
-            height: 85vh;
-            overflow: auto;
-            text-align: justify;
-        }
-
-        .content > ul {
-            position: absolute;
-            left: 0;
-            top: 0;
-            right: 0;
-            bottom: 0;
-            z-index: 1;
-            opacity: 0;
-            -webkit-transform: scale(0.95);
-        }
-
-        .content > .active {
-            -webkit-transform: scale(1);
-            -webkit-transition: all 0.4s ease-in;
-            transition: all 0.4s ease-in;
-            opacity: 1;
-            z-index: 2
-        }
-
-        .content ul li {
-            display: inline-block;
-            height: 8vh;
-            line-height: 8vh;
-            width: 46%;
-            margin: 1.6vh 0 0 0;
-            padding: 0.5vw;
-            background: rgba(200, 200, 200, 0.3);
-            text-align: center;
-            cursor: pointer;
-        }
-
-        .content ul li:hover,.content ul li.active {
-            -webkit-transition: all 0.4s ease-in;
-            transition: all 0.4s ease-in;
-            background: rgba(100, 100, 100, 0.5);
-            color: #fff;
-        }
-
-        .content ul li.goBack {
-            border-radius: 16vh 0 0 0;
-        }
-
-        .content ul li.align-fixed {
-            height:0;
-            width: 100%;
-            margin: 0;
-            padding: 0;
-            line-height: 0;
-        }
-    </style>
-    <x-switchTab>
-        <ul class="nav">
-            <li class="active">公共频道</li>
-            <li>个人频道</li>
-            <li>流派频道</li>
-        </ul>
-        <div class="content">
-            <ul class="active public-channels">
-                <template repeat="{{item in publicChannels}}">
-                    <li id="{{item.id}}" class="{{item.id == channelId ? 'active' : ''}}"
-                        on-click="{{selectChannel}}">{{item.name}}</li>
-                </template>
-                <li class="align-fixed"></li>
-            </ul>
-            <ul class="personal-channels">
-                <template repeat="{{item in personalChannels}}">
-                    <li id="{{item.id}}" class="{{item.id == channelId ? 'active' : ''}}"
-                        on-click="{{selectChannel}}">{{item.name}}</li>
-                </template>
-                <template if="{{!gotFavChannels}}">
-                    <li on-click="{{getFavChannels}}">我收藏的频道</li>
-                </template>
-                <li class="align-fixed"></li>
-            </ul>
-            <ul class="genre-channels">
-                <template if="{{showGenreDetail}}">
-                    <li class="goBack" on-click="{{goBack}}">&#60;回到流派</li>
-                </template>
-                <template if="{{!showGenreDetail}}" repeat="{{genreList}}">
-                    <li id="{{id}}" on-click="{{selectGenre}}">{{name}}</li>
-                </template>
-                <template if="{{showGenreDetail}}" repeat="{{item in genreChannels}}">
-                    <li id="{{item.id}}" class="{{item.id == channelId ? 'active' : ''}}"
-                        on-click="{{selectChannel}}">{{item.name}}</li>
-                </template>
-                <li class="align-fixed"></li>
-            </ul>
-        </div>
-    </x-switchTab>
-</template>
-<script>
-    Polymer('x-channel',{
-        channelId : FM.status.channel.id,
-        publicChannels : [],
-        personalChannels : [],
-        genreChannels : [],
-
-        ready : function() {
-            this.publicChannels = this.getPublicChannels()
-            this.personalChannels = this.getPersonalChannels()
-            this.genreList = this.getGenrelist()
-        },
-
-        //公共频道
-        getPublicChannels : function() {
-            return FM.webSDK.public_channels()
-        },
-
-        //流派频道
-        getGenrelist: function() {
-            return FM.webSDK.genre_list()
-        },
-
-        //私人频道
-        getPersonalChannels : function() {
-            return FM.webSDK.personal_channels()
-        },
-
-        //TODO 测试未通过, 暂无api接口
-        getFavChannels : function(e) {
-            return false
-            var self = this
-            FM.appSDK.fav_channels({}, function(err, channels) {
-                if(channels.length) {
-                    self.personalChannels = self.personalChannels.concat(channels)
-                    self.gotFavChannels = true
-                }
-            })
-        },
-
-        //切换频道
-        selectChannel : function(e) {
-            var li = e.currentTarget
-            var id = li.id
-            if(id == this.channelId) {
-                return
+<polymer-element name="x-channel" attributes="channel small active">
+    <template>
+        <style>
+            div {
+                position: relative;
+                height: 20vh;
+                margin: 2vh 0;
+                cursor: pointer;
+                text-align: left;
+                background: rgba(255,255,255,0.5);
             }
-            FM.appSDK.songs({
-                channel_id : id
-            }, function(err, songs) {
-                if(err) console.error(err)
-                FM.playlist.reset(songs)
-                FM.status.channel = {
-                    id : id,
-                    name : li.textContent
+
+            img {
+                position: absolute;
+                top: 1vh;
+                left: 1vh;
+                height: 18vh;
+                width: 18vh;
+            }
+
+            h3 {
+                position: absolute;
+                left: 21vh;
+                top: 1vh;
+                right: 1vh;
+                margin: 0;
+                height: 7vh;
+                line-height: 7vh;
+                font-size: 4vh;
+                white-space: nowrap;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                font-weight: normal;
+            }
+
+            h3 b {
+                font-size: 15px;
+                opacity: 0;
+            }
+
+            p {
+                position: absolute;
+                left: 21vh;
+                top: 9vh;
+                bottom: 1vh;
+                right: 1vh;
+                margin: 0;
+                padding: 0;
+                font-size: 3.0vh;
+                line-height: 5vh;
+                display: -webkit-box;
+                -webkit-line-clamp : 2;
+                -webkit-box-orient: vertical;
+                overflow: hidden;
+            }
+
+            i {
+                position: absolute;
+                z-index: 2;
+                right: 2vh;
+                top: -2vh;
+                font-size: 24px;
+                font-style: normal;
+                opacity: 0;
+            }
+
+            i.unfav {
+                color: red;
+            }
+
+            i.cantplay {
+                opacity: 1;
+            }
+
+            div:hover i, div:hover b {
+                cursor: pointer;
+                opacity: 1;
+                -webkit-transition: opacity 0.4s ease-in;
+            }
+
+            .small {
+                display: inline-block;
+                height: 8vh;
+                line-height: 8vh;
+                width: 46%;
+                margin: 1.6vh 0 0 0;
+                padding: 0.5vw;
+                background: rgba(255, 255, 255, 0.5);
+                text-align: center;
+                cursor: pointer;
+                white-space: nowrap;
+                overflow: hidden;
+                text-overflow: ellipsis;
+            }
+
+            .small:hover,.small.active {
+                -webkit-transition: all 0.4s ease-in;
+                transition: all 0.4s ease-in;
+                background: rgba(200, 200, 200, 0.5);
+                color: #fff;
+            }
+
+            .small img, .small i, .small b, .small p {
+                display: none;
+            }
+
+            .small h3 {
+                position: static;
+                height: 8vh;
+                line-height: 8vh;
+                font-size: 12px;
+            }
+        </style>
+        <div data-id="{{channel.id}}" on-click="{{selectChannel}}"
+             class="{{active? 'active' : ''}} {{small? 'small':''}}">
+            <img src="{{channel.cover}}" />
+            <h3>{{channel.name}}
+                <template if="{{channel.url}}">
+                    <b href="{{channel.url}}" title="查看资料" on-click="{{goDetail}}" class="iconfont">&#xe645;</b>
+                </template>
+            </h3>
+            <p>{{channel.intro}}</p>
+            <template if="{{channel.cantPlay}}">
+                <!--<i class="iconfont cantplay" title="不支持播放">&#xe64a;</i>-->
+            </template>
+            <template if="{{!channel.cantPlay}}">
+                <i class="iconfont {{channel.isfav ? 'unfav' : 'fav'}}" title="{{channel.isfav ? '取消收藏' : '收藏频道'}}" on-click="{{fav}}">&#xe640;</i>
+            </template>
+        </div>
+    </template>
+    <script>
+        Polymer('x-channel',{
+            active : false,
+            channel : {},
+            ready : function() {
+                var self = this
+                this.active = FM.status.channel.id == this.channel.id
+            },
+
+            //收藏和取消收藏
+            fav : function(e) {
+                e.stopPropagation()
+                var self = this
+                self.channel.isfav = !self.channel.isfav
+                if(!self.channel.isfav) {
+                    FM.obs.emit('CHANNEL:UNFAV', self.channel)
+                } else {
+                    FM.obs.emit('CHANNEL:FAV', self.channel)
                 }
-            })
-            this.channelId = id
-        },
+            },
 
-        //切换流派
-        selectGenre : function(e) {
-            var self = this
-            var id = e.currentTarget.id
-            FM.webSDK.genre_channels({
-                gid : id
-            },function(err, channels) {
-                self.genreChannels = channels
-                self.showGenreDetail = true
-            })
-        },
+            //频道变化时, 给元素加data-id
+            channelChanged : function() {
+                this.dataset.id = this.channel.id
+            },
 
-        //返回流派列表
-        goBack : function() {
-            this.showGenreDetail = false
-        }
-    })
-</script>
+            //切换频道
+            selectChannel : function() {
+                if(this.active || this.channel.cantPlay) return
+                var self = this
+                var option = {
+                    channel_id : self.channel.id
+                }
+
+                //是否是可收听的专辑兆赫
+                if(self.channel.subject) {
+                    option.context = 'channel:0|subject_id:' + self.channel.id
+                    option.channel_id = 0
+                }
+
+                FM.appSDK.songs(option, function(err, songs) {
+                    if(err) console.error(err)
+                    FM.playlist.reset(songs)
+                    FM.status.channel = self.channel
+                    FM.obs.emit('CHANNEL:UPDATE', self.channel)
+                    self.active = true
+                })
+            },
+
+            //查看详细资料
+            goDetail : function(e) {
+                e.stopPropagation()
+                var open = require('open')
+                var a = e.currentTarget
+                var href = a.getAttribute('href')
+                open(href)
+            }
+        })
+    </script>
 </polymer-element>
